--- a/app/scripts/module-cms/views/contents.html
+++ b/app/scripts/module-cms/views/contents.html
@@ -15,6 +15,7 @@
 			ng-click="ctrl.openEditor(content, $event)"
 			class="md-3-line">
 			<amd-content-icon 
+				class="md-avatar-icon"
 				ng-model="content">
 			</amd-content-icon>
 			<div 
