Textarea is much more better to edit larg text.

--- a/app/scripts/module-cms/views/content-new.html
+++ b/app/scripts/module-cms/views/content-new.html
@@ -18,12 +18,12 @@
 		
 		<md-input-container>
 			<label mb-translate>Title</label>
-			<input ng-model="config.model.title"></input>
+			<textarea ng-model="config.model.title"></textarea>
 		</md-input-container>
 
 		<md-input-container>
 			<label mb-translate>Description</label>
-			<input ng-model="config.model.description"></input>
+			<textarea ng-model="config.model.description"></textarea>
 		</md-input-container>
 
 		<md-input-container>
