--- a/app/scripts/module-seo/views/backends.html
+++ b/app/scripts/module-seo/views/backends.html
@@ -1,56 +1,35 @@
-<div
+<md-content
+	mb-preloading="ctrl.state === 'busy'"
+	mb-infinate-scroll="ctrl.loadNextPage()"
 	layout="column"
 	flex>
-	<mb-pagination-bar
-		mb-model="ctrl.queryParameter"
-		mb-properties="ctrl.properties"
-		mb-reload="ctrl.reload()"
-		mb-more-actions="ctrl.getActions()">
-	</mb-pagination-bar>
-	<md-content
-		mb-preloading="ctrl.state === 'busy'"
-		mb-infinate-scroll="ctrl.loadNextPage()"
-		layout="column"
-		flex>
-		<md-list flex>
-			<md-list-item 
-				ng-href="seo/backends/{{object.id}}"
-				ng-repeat="object in ctrl.items track by object.id"
-				class="md-3-line">
-				<img
-					ng-if="object.symbol"
-					ng-src="{{object.symbol}}"
-					class="md-avatar" 
-					alt="{{object.id}}">
-				<mb-icon ng-if="!object.symbol">dvr</mb-icon>
-				<div 
-					class="md-list-item-text" 
-					layout="column">
-					<h3>{{object.title}}</h3>
-					<h4>{{object.engine}}</h4>
-					<p>{{object.description}}</p>
-				</div>
-				<md-button
-					class="md-icon-button"
-					ng-click="ctrl.deleteItem(object, $event)">
-					<mb-icon>delete</mb-icon>
-				</md-button>
-				<md-divider md-inset></md-divider>
-			</md-list-item>
-		</md-list>
-		<div
-			layout="column"
-			layout-align="center center"
-			ng-show="ctrl.state !== 'busy' && ctrl.items && ctrl.items.length === 0">
-			<h2 mb-translate="">Empty backend list</h2>
-			<p mb-translate="">Any backend match with the query. You can add a new backend by 
-				click on the add button. Links improve your site rank.</p>
+	<md-list flex>
+		<md-list-item 
+			ng-href="seo/backends/{{object.id}}"
+			ng-repeat="object in ctrl.items track by object.id"
+			class="md-3-line">
+			<img
+				ng-if="object.symbol"
+				ng-src="{{object.symbol}}"
+				class="md-avatar" 
+				alt="{{object.id}}">
+			<mb-icon 
+				ng-class="md-avatar-icon" 
+				ng-if="!object.symbol">dvr</mb-icon>
+			<div 
+				class="md-list-item-text" 
+				layout="column">
+				<h3>{{object.title}}</h3>
+				<h4>{{object.engine}}</h4>
+				<p>{{object.description}}</p>
+			</div>
 			<md-button
-				ng-click="ctrl.addItem($event)">
-				<mb-icon>add</mb-icon>
-				<span mb-translate="">Add</span>
+				class="md-icon-button"
+				ng-click="ctrl.deleteItem(object, $event)">
+				<mb-icon>delete</mb-icon>
 			</md-button>
-		</div>
-	</md-content>
-</div>
+			<md-divider md-inset></md-divider>
+		</md-list-item>
+	</md-list>
+</md-content>
 
