--- a/app/scripts/module-seo/views/crawled-links.html
+++ b/app/scripts/module-seo/views/crawled-links.html
@@ -1,94 +1,76 @@
-<div
+<md-content
+	mb-preloading="ctrl.state === 'busy'"
+	mb-infinate-scroll="ctrl.loadNextPage()"
 	layout="column">
-	<mb-pagination-bar
-		mb-model="ctrl.queryParameter"
-		mb-properties="ctrl.properties"
-		mb-reload="ctrl.reload()"
-		mb-more-actions="ctrl.getActions()">
-	</mb-pagination-bar>
-	<md-content
-		mb-preloading="ctrl.state === 'busy'"
-		mb-infinate-scroll="ctrl.loadNextPage()"
-		layout="column"
-		flex>
-		<md-list>
-			<md-list-item 
-				ng-repeat="object in ctrl.items track by object.id"
-				ng-click="ctrl.openWithRender(object)"
-				class="md-3-line">
-				<mb-icon>donut_small</mb-icon>
-				<div 
-					class="md-list-item-text" 
-					layout="column">
-					<h3>{{object.title}}</h3>
-					<h4>{{::object.url}}</h4>
-					<p>{{object.description}}</p>
-				</div>
-				<md-menu>
-					<md-button class="md-icon-button"
-						ng-click="$mdMenu.open($event);" 
-						aria-label="remove attachment"><mb-icon>more_vert</mb-icon>
-					</md-button>
-					<md-menu-content width="4">
-						<md-menu-item>
-							<md-button 
-								ng-href="{{::object.url}}"
-								aria-label="Open in new tab"
-								target="_blank">
-								<mb-icon>open_in_browser</mb-icon>
-								<span translate>Open</span>
-							</md-button>
-						</md-menu-item>
-						<md-menu-item>
-							<md-button 
-								ng-click="ctrl.openWithRender(object)"
-								aria-label="Render content">
-								<mb-icon>edit</mb-icon>
-								<span translate>Open with render</span>
-							</md-button>
-						</md-menu-item>
-						<md-menu-divider></md-menu-divider>
-						<md-menu-item>
-							<md-button 
-								ng-click="ctrl.upload(object)" 
-								aria-label="Upload content">
-								<mb-icon>cloud_upload</mb-icon>
-								<span translate>Upload</span>
-							</md-button>
-						</md-menu-item>
-						<md-menu-item>
-							<md-button 
-								aria-label="Download content"
-								ng-href="/api/v2/seo/contents/{{::object.id}}/content"
-								target="_blank" 
-								download="{{object.file_name}}">
-								<mb-icon>cloud_download</mb-icon>
-								<span translate>Download</span>
-							</md-button>
-						</md-menu-item>
-						<md-menu-divider></md-menu-divider>
-						<md-menu-item>
-							<md-button 
-								ng-click="ctrl.deleteItem(object)" 
-								aria-label="Delete content">
-								<mb-icon>delete</mb-icon>
-								<span translate>Delete</span>
-							</md-button>
-						</md-menu-item>
-					</md-menu-content>
-				</md-menu>
-				<md-divider md-inset></md-divider>
-			</md-list-item>
-		</md-list>
-	
-		<div
-			layout="column"
-			layout-align="center center"
-			ng-show="ctrl.state !== 'busy' && ctrl.items && ctrl.items.length === 0">
-			<h2 mb-translate>Empty crawled links</h2>
-			<p mb-translate>There is no link in crawled list. This means that no crawler has requested your site.</p>
-		</div>
-	</md-content>
-</div>
+	<md-list>
+		<md-list-item 
+			ng-repeat="object in ctrl.items track by object.id"
+			ng-click="ctrl.openWithRender(object)"
+			class="md-3-line">
+			<mb-icon class="md-avatar-icon">donut_small</mb-icon>
+			<div 
+				class="md-list-item-text" 
+				layout="column">
+				<h3>{{object.title}}</h3>
+				<h4>{{::object.url}}</h4>
+				<p>{{object.description}}</p>
+			</div>
+			<md-menu>
+				<md-button class="md-icon-button"
+					ng-click="$mdMenu.open($event);" 
+					aria-label="remove attachment"><mb-icon>more_vert</mb-icon>
+				</md-button>
+				<md-menu-content width="4">
+					<md-menu-item>
+						<md-button 
+							ng-href="{{::object.url}}"
+							aria-label="Open in new tab"
+							target="_blank">
+							<mb-icon>open_in_browser</mb-icon>
+							<span translate>Open</span>
+						</md-button>
+					</md-menu-item>
+					<md-menu-item>
+						<md-button 
+							ng-click="ctrl.openWithRender(object)"
+							aria-label="Render content">
+							<mb-icon>edit</mb-icon>
+							<span translate>Open with render</span>
+						</md-button>
+					</md-menu-item>
+					<md-menu-divider></md-menu-divider>
+					<md-menu-item>
+						<md-button 
+							ng-click="ctrl.upload(object)" 
+							aria-label="Upload content">
+							<mb-icon>cloud_upload</mb-icon>
+							<span translate>Upload</span>
+						</md-button>
+					</md-menu-item>
+					<md-menu-item>
+						<md-button 
+							aria-label="Download content"
+							ng-href="/api/v2/seo/contents/{{::object.id}}/content"
+							target="_blank" 
+							download="{{object.file_name}}">
+							<mb-icon>cloud_download</mb-icon>
+							<span translate>Download</span>
+						</md-button>
+					</md-menu-item>
+					<md-menu-divider></md-menu-divider>
+					<md-menu-item>
+						<md-button 
+							ng-click="ctrl.deleteItem(object)" 
+							aria-label="Delete content">
+							<mb-icon>delete</mb-icon>
+							<span translate>Delete</span>
+						</md-button>
+					</md-menu-item>
+				</md-menu-content>
+			</md-menu>
+			<md-divider md-inset></md-divider>
+		</md-list-item>
+	</md-list>
+</md-content>
 
 
