--- a/app/scripts/module-user/views/groups.html
+++ b/app/scripts/module-user/views/groups.html
@@ -1,36 +1,22 @@
-<div 
+<md-content
+	mb-preloading="ctrl.loading"
+	mb-infinate-scroll="ctrl.loadNextPage()"
 	layout="column"
 	flex>
-    <!-- TODO: maso, 1395: در حالت خطا یک صفحه با امکان reload اضافه بشه. -->
-    <mb-pagination-bar
-        mb-model="ctrl.queryParameter"
-        mb-reload="ctrl.reload()"
-        mb-sort-keys="ctrl.getSortKeys()"
-        mb-more-actions="ctrl.getActions()"
-        mb-properties="ctrl.properties">
-    </mb-pagination-bar>
-	
-	<md-content
-		mb-preloading="ctrl.state === 'busy'"
-		mb-infinate-scroll="ctrl.loadNextPage()"
-		layout="column"
-		flex>
-	
-		<md-list flex>
-			<md-list-item 
-				ng-repeat="group in ctrl.items track by group.id"
-				ng-href="ums/groups/{{::group.id}}"
-				class="md-3-line">
-				<mb-icon>group</mb-icon>
-				<div 
-					class="md-list-item-text" 
-					layout="column">
-					<h3>{{::group.name}}</h3>
-					<h4></h4>
-					<p>{{::group.description}}</p>
-				</div>
-				<md-divider md-inset></md-divider>
-			</md-list-item>
-		</md-list>
-	</md-content>
-</div>
+	<md-list flex>
+		<md-list-item 
+			ng-repeat="group in ctrl.items track by group.id"
+			ng-href="ums/groups/{{::group.id}}"
+			class="md-3-line">
+			<mb-icon>group</mb-icon>
+			<div 
+				class="md-list-item-text" 
+				layout="column">
+				<h3>{{::group.name}}</h3>
+				<h4></h4>
+				<p>{{::group.description}}</p>
+			</div>
+			<md-divider md-inset></md-divider>
+		</md-list-item>
+	</md-list>
+</md-content>
