--- a/src/modules/sdp/views/assets.html
+++ b/src/modules/sdp/views/assets.html
@@ -11,7 +11,7 @@
 				class="md-avatar"
 				ng-if="asset.cover && !asset.$selected" 
 				ng-click="ctrl.toggleSelection(asset, $event)"
-				ng-src-error="https://www.gravatar.com/avatar/{{ ::asset.id | wbmd5 }}?d=identicon&size=32"
+				ng-src-error="https://www.gravatar.com/avatar/{{ ::asset.id | mbmd5 }}?d=identicon&size=32"
 				ng-src="{{asset.cover}}">
 			<mb-icon
 				style="z-index: 1;"
