--- a/src/modules/account/components/account-toolbar.html
+++ b/src/modules/account/components/account-toolbar.html
@@ -2,13 +2,13 @@
 	class="amd-account-toolbar">
 	<div 
 		class="anchor"
-		ng-click="$mdOpenMenu()" 
+		ng-click="$mdMenu.open()" 
 		aria-label="Open menu">
 		<img 
 			width="24px"
 			height="24px"
 			ng-src="/api/v2/user/accounts/{{authentication.details.id}}/avatar"
-			ng-src-error="https://www.gravatar.com/avatar/{{authentication.details.id|wbmd5}}?d=identicon&size=32">
+			ng-src-error="https://www.gravatar.com/avatar/{{authentication.details.id|mbmd5}}?d=identicon&size=32">
 		<span>{{::authentication.details.profiles[0].first_name}} {{::authentication.details.profiles[0].last_name}}</span>
 	</div>
 	<md-menu-content>
