--- a/src/modules/user/views/groups.html
+++ b/src/modules/user/views/groups.html
@@ -1,22 +1,13 @@
 <md-content
 	mb-preloading="ctrl.loading"
 	mb-infinate-scroll="ctrl.loadNextPage()"
-	layout="column"
-	flex>
+	layout="column">
 	<md-list flex>
 		<md-list-item 
 			ng-repeat="group in ctrl.items track by group.id"
-			ng-href="ums/groups/{{::group.id}}"
-			class="md-3-line">
+			ng-href="ums/groups/{{::group.id}}">
+			<p>{{::group.name}}</p>
 			<mb-icon>group</mb-icon>
-			<div 
-				class="md-list-item-text" 
-				layout="column">
-				<h3>{{::group.name}}</h3>
-				<h4></h4>
-				<p>{{::group.description}}</p>
-			</div>
-			<md-divider md-inset></md-divider>
 		</md-list-item>
 	</md-list>
 </md-content>
