add action to remove crawled link

--- a/src/modules/seo/views/crawled-links.html
+++ b/src/modules/seo/views/crawled-links.html
@@ -60,7 +60,7 @@
 					<md-menu-divider></md-menu-divider>
 					<md-menu-item>
 						<md-button 
-							ng-click="ctrl.deleteItem(object)" 
+							ng-click="ctrl.execOnModel(SEEN_MODEL_DELETE_ACTION, object, $event)" 
 							aria-label="Delete content">
 							<mb-icon>delete</mb-icon>
 							<span translate>Delete</span>
