fixed: adding new product

--- a/src/modules/shop/views/products.html
+++ b/src/modules/shop/views/products.html
@@ -18,7 +18,7 @@
 					<span mb-translate="">Price</span>: {{pobject.price}} 
 					<span ng-show="pobject.off">- <span tanslate="">Off</span>: <s>{{pobject.off}}</s></span>
 				</h4>
-				<p>{{pobject.description}}</p>
+				<p class="product-description-singleline">{{pobject.description}}</p>
 			</div>
 			<md-divider md-inset></md-divider> 
 		</md-list-item> 
