--- a/src/modules/shop/views/categories.html
+++ b/src/modules/shop/views/categories.html
@@ -11,13 +11,13 @@
 			ng-href="shop/categories/{{::pobject.id}}"
 			style="cursor: pointer">
 			<img ng-if="pobject.thumbnail" ng-src="{{pobject.thumbnail}}"  class="md-avatar" />
-			<mb-icon ng-if="!pobject.thumbnail">folder_special</mb-icon>
+			<mb-icon size="40" ng-if="!pobject.thumbnail">folder_special</mb-icon>
 			<div 
 				class="md-list-item-text" 
 				layout="column">
-				<!--<h3>{{pobject.id}}</h3>-->
+				<h3><span mb-translate>ID</span>: {{::pobject.id}}</h3>
 				<h4>{{pobject.name}}</h4>
-				<p>{{pobject.description}}</p>
+				<p class="category-description-singleline">{{pobject.description}}</p>
 			</div>
 			<md-divider md-inset></md-divider>
 		</md-list-item>
